<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_8sdp"
    android:orientation="vertical"
    tools:context=".ui.ResetPasswordActivity">

    <androidx.cardview.widget.CardView
        android:visibility="gone"
        android:id="@+id/cardSearch"
        app:cardBackgroundColor="@color/AliceBlue"
        app:cardCornerRadius="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="@dimen/_12sdp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:textColor="@color/Black"
                android:text="@string/enter_your_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edtUserName"
                android:textColor="@color/Black"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:hint="username"
                android:background="@drawable/editext_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSearch"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/White"
                android:text="@string/search_account"
                android:background="@color/themeColor"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:visibility="gone"
        android:id="@+id/cardOtp"
        app:cardBackgroundColor="@color/AliceBlue"
        app:cardCornerRadius="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="@dimen/_12sdp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:textColor="@color/Black"
                android:text="@string/enter_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:visibility="gone"
                android:id="@+id/txtEmail"
                android:textColor="@color/Black"
                android:text="Otp send to your email maruf@gmail.com. Very enter your otp which is send to your email."
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edtOtp"
                android:inputType="number"
                android:textColor="@color/Black"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:hint="OTP"
                android:background="@drawable/editext_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnVerify"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/White"
                android:text="@string/verify"
                android:background="@color/themeColor"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:visibility="gone"
        android:id="@+id/cardPassword"
        app:cardBackgroundColor="@color/AliceBlue"
        app:cardCornerRadius="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="@dimen/_12sdp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:textColor="@color/Black"
                android:text="@string/enter_new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



            <EditText
                android:id="@+id/edtPassword1"
                android:inputType="textPassword"
                android:textColor="@color/Black"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:hint="@string/new_password"
                android:background="@drawable/editext_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edtPassword2"
                android:inputType="textPassword"
                android:textColor="@color/Black"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"
                android:hint="@string/new_password_again"
                android:background="@drawable/editext_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnChangePassword"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/White"
                android:text="@string/change_password"
                android:background="@color/themeColor"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>