<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp"
    android:layout_marginBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_4sdp"
        android:gravity="center_vertical">

        <!-- Name -->
        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:textStyle="bold"
            android:textColor="#222"
            android:text="@string/name"
            android:textSize="@dimen/_10sdp"
            android:paddingEnd="8dp"
            android:maxLines="2"
            android:ellipsize="end" />

        <!-- Breakfast -->
        <TextView
            android:id="@+id/morning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/breakfast"
            android:textSize="@dimen/_10sdp"
            android:maxLines="1"
            android:ellipsize="end" />

        <!-- Lunch -->
        <TextView
            android:id="@+id/lunch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/lunch"
            android:textSize="@dimen/_10sdp"
            android:maxLines="1"
            android:ellipsize="end" />

        <!-- Dinner -->
        <TextView
            android:id="@+id/dinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/dinner"
            android:textSize="@dimen/_10sdp"
            android:maxLines="1"
            android:ellipsize="end" />

        <!-- Action Button -->
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/action"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="Edit"
            android:textSize="@dimen/_10sdp"
            android:minWidth="64dp"
            android:layout_marginStart="8dp"
            android:paddingHorizontal="8dp" />

    </LinearLayout>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>