<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:fontFamily="@font/hubballi"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:textSize="@dimen/_25sdp"
                android:textColor="@color/themeColor"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_gravity="center"
                android:fontFamily="@font/hubballi"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/themeColor"
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:src="@drawable/login"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"/>


            <EditText
                android:textSize="@dimen/_13sdp"
                android:inputType="text"
                android:layout_marginBottom="@dimen/_8sdp"
                android:id="@+id/edtUerName"
                android:hint="@string/user_name"
                android:background="@drawable/editext_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText

                android:textSize="@dimen/_13sdp"
                android:inputType="textPassword"
                android:id="@+id/edtPassword"
                android:hint="@string/password"
                android:background="@drawable/editext_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txtForgotPassword"
                    android:textStyle="bold"
                    android:textColor="@color/themeColor"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:gravity="center"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/forgot_login_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>



            <LinearLayout
                android:layout_margin="@dimen/_8sdp"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtPrivacyPolicy"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/Black"
                    android:gravity="center"
                    android:text="@string/accept_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:textSize="@dimen/_16sdp"
                android:text="@string/l_o_g_i_n"
                android:background="@drawable/button_primary"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnNewMess"
                android:textSize="@dimen/_16sdp"
                android:text="@string/create_new_mess"
                android:background="@drawable/button_primary"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <com.logicline.mydining.ui.custom_views.LanguageView
                android:drawablePadding="@dimen/_4sdp"
                android:id="@+id/txtLang"
                android:text=""
                android:layout_margin="@dimen/_8sdp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawableLeftCompat="@drawable/translate" />

            <com.logicline.mydining.ui.custom_views.BannerView
                app:banner="loginActivity"
                android:layout_margin="@dimen/_8sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.cardview.widget.CardView
                android:layout_marginBottom="@dimen/_20sdp"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/cardContactUs"
                android:elevation="@dimen/_30sdp"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardBackgroundColor="@color/Azure"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:padding="@dimen/_4sdp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <ImageView

                        android:src="@drawable/customer_service"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"/>

                    <TextView
                        android:textColor="@color/Black"
                        android:textStyle="bold"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:text="@string/contact_us_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>



    </LinearLayout>

</ScrollView>