<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="@dimen/_8sdp"
    android:layout_width="match_parent"
    android:background="@color/White"
    android:layout_height="wrap_content">

    <TextView
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/Black"
        android:padding="@dimen/_10sdp"
        android:background="@color/Azure"
        android:gravity="center"
        android:text="@string/switch_mess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:background="@color/LightBlue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"/>


    <EditText
        android:id="@+id/edtMessId"
        android:inputType="number"
        android:gravity="center"
        android:hint="@string/enter_mess_id"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/round_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_margin="@dimen/_25sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatButton
            android:textSize="@dimen/_16sdp"
            android:id="@+id/btnCancel"
            android:background="@color/Lavender"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:textSize="@dimen/_16sdp"
            android:id="@+id/btnSwitch"
            android:background="@color/Lavender"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/switch_mess"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>