<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="@dimen/_8sdp"
    android:layout_width="match_parent"
    android:background="@color/White"
    android:layout_height="wrap_content">

    <TextView
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/Black"
        android:padding="@dimen/_10sdp"
        android:background="@color/Azure"
        android:gravity="center"
        android:text="@string/select_your_preferred_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:background="@color/LightBlue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"/>


    <RadioGroup
        android:id="@+id/radioGrpLang"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioBtnEn"
            android:textSize="@dimen/_14sdp"
            android:layout_margin="@dimen/_8sdp"
            android:text="English"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/radioBtnBn"
            android:textSize="@dimen/_14sdp"
            android:layout_margin="@dimen/_8sdp"
            android:text="Bengali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <LinearLayout
        android:layout_margin="@dimen/_25sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatButton
            android:textSize="@dimen/_16sdp"
            android:id="@+id/btnCancel"
            android:background="@color/Lavender"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:textSize="@dimen/_16sdp"
            android:id="@+id/btnSave"
            android:background="@color/Lavender"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>